--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(example)
 
 # 获取目录下所有源文件
-file(GLOB_RECURSE SOURCE_FILE_LIST *.cc *.cpp)
+file(GLOB_RECURSE SOURCE_FILE_LIST ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
 
 # 遍历源文件列表，为每个文件生成一个可执行程序
 foreach(SOURCE_FILE ${SOURCE_FILE_LIST})
@@ -16,13 +16,12 @@ foreach(SOURCE_FILE ${SOURCE_FILE_LIST})
 
     target_compile_definitions(${FILE_NAME} PRIVATE NDEBUG _CRT_SECURE_NO_WARNINGS)
 
-    if(UNIX AND NOT APPLE)
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         target_link_options(${FILE_NAME} PRIVATE -rdynamic)
-        target_link_libraries(${FILE_NAME} PRIVATE pthread)
-    endif()
-
-    if(MSVC)
-        target_compile_options(${FILE_NAME} PRIVATE /utf-8)
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+        target_compile_options(${FILE_NAME} PRIVATE /utf-8 /W4)
+    else()
+        message(ERROR "Compiling with an unknown compiler")
     endif()
 
     target_link_libraries(${FILE_NAME} PRIVATE eular::log2)
